# utils/db/schema.js
@@ -19,7 +19,7 @@ db.schema.hasTable('blocks').then(function (exists) {
       table.integer('version').notNullable()
       table.bigInteger('timestamp').notNullable()
       table.datetime('datetime')
-      table.boolean('confirmed').defaultTo(false)
+      table.boolean('verified').defaultTo(false)
     })
   }
 })
@@ -64,7 +64,7 @@ db.schema.hasTable('transactions').then(function (exists) {
       table.datetime('datetime')
       table.integer('version')
       table.string('leaseId')
-      table.boolean('confirmed').defaultTo(false)
+      table.boolean('verified').defaultTo(false)
     })
   }
 })
